--- a/public/styles.css
+++ b/public/styles.css
@@ -115,9 +115,9 @@ body {
 
 
 .know-more-btn {
-  background-color: #2823FF; /* Default background color */
+  background-color: #1f3695; /* Default background color */
   color: #FCF7FF; /* Default text color */
-  border: 2px solid #2823FF; /* Border color */
+  border: 2px solid #1f3695; /* Border color */
   border-radius: 8px; /* Rounded corners */
   padding: 10px 20px; /* Padding for the button */
   font-size: 16px; /* Font size for the button text */
@@ -136,8 +136,8 @@ body {
 
 .know-more-btn:active {
   background-color: #FCF7FF; /* Background color on active */
-  color: #2823FF; /* Text color on active */
-  border: 2px solid #2823FF; /* Border color on active */
+  color: #1f3695; /* Text color on active */
+  border: 2px solid #1f3695; /* Border color on active */
 }
 
 /* Styling for the service-title div */
