--- a/public/styles.css
+++ b/public/styles.css
@@ -115,9 +115,9 @@ body {
 
 
 .know-more-btn {
-  background-color: #1f3695; /* Default background color */
+  background-color: #3f5d4f; /* Default background color */
   color: #FCF7FF; /* Default text color */
-  border: 2px solid #1f3695; /* Border color */
+  border: 2px solid #3f5d4f; /* Border color */
   border-radius: 8px; /* Rounded corners */
   padding: 10px 20px; /* Padding for the button */
   font-size: 16px; /* Font size for the button text */
@@ -128,16 +128,19 @@ body {
   left: 20px; /* 20px from the left */
   text-decoration: none;
   font-family: 'Space Grotesk';
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .know-more-btn:hover {
   opacity: 0.8; /* Reduced opacity on hover */
+  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.1);
+
 }
 
 .know-more-btn:active {
   background-color: #FCF7FF; /* Background color on active */
-  color: #1f3695; /* Text color on active */
-  border: 2px solid #1f3695; /* Border color on active */
+  color: #3f5d4f; /* Text color on active */
+  border: 2px solid #3f5d4f; /* Border color on active */
 }
 
 /* Styling for the service-title div */
