--- a/public/laws.css
+++ b/public/laws.css
@@ -24,9 +24,16 @@
   justify-content: center;
   text-align: center;
   color: #FCF7FF;
-  background: #3f5d4f;
+  background: #708F80;
   height: 70%;
+  border-radius: 5px;
 }
+
+.law:hover{
+  background-color: #3f5d4f;
+  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.1);
+}
+
 
 
 
@@ -58,7 +65,7 @@
   border-radius: 5px;
   text-decoration: none; /* Remove underline from links */
   transition: opacity 0.15s, background-color 0.15s, color 0.15s, box-shadow 0.15s;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Add a small box shadow */
+  /*box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Add a small box shadow */
 }
 
 .read-more-button:hover {
