improving responsiveness of footer and comment section

--- a/public/comment.css
+++ b/public/comment.css
@@ -202,3 +202,12 @@
     width: 300px;
   }
 }
+
+@media (max-width: 875px) {
+ 
+  .comments{
+    
+    grid-template-columns: repeat(1, 1fr);
+
+  }
+}
