--- a/public/contact-us.css
+++ b/public/contact-us.css
@@ -7,7 +7,8 @@ body {
 }
 
 .contact-us-content {
-    max-width: 800px;
+    width: 60vw;
+    max-width: 700px;
     margin: 50px auto;
     padding: 20px;
     background-color: #FCF7FF;
