--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,7 @@
 
 html {
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 /* Adjusted padding-top to 120px */
@@ -17,6 +18,9 @@ body {
   padding-bottom: 0px;
   font-family: "Space Grotesk";
   background-color: #FCF7FF;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Styling for the Home-img div */
@@ -188,4 +192,27 @@ body {
     display: none;
     
   }
+}
+
+.green-banner {
+  height: 100px;
+  width: 100%;
+  background: linear-gradient(to right, #039639, #FCF7FF);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+}
+.green-banner p {
+  font-weight: bold;
+  color: #FCF7FF;
+  margin: 0;
+  font-family: 'Space Grotesk';
+}
+
+.page-wrapper {
+  flex: 1 0 auto;
+}
+
+.footer {
+  flex-shrink: 0;
 }
